--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,17 @@
   border-color: red;
   color: red;
 }
+
+.blog-container {
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  border-color: black;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: 400px;
+}
+
+.text-hover {
+  cursor: pointer;
+}
